test/MC/SVE/regression-tests/negative_tests/sve-st2b-001.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8E2Store1LSSZ
// Offset register Rm cannot be xzr
st2b {z9.b, z10.b}, p4, [x26, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
